Realize the simple version of gamepad.

--- a/VirtualGamepad/app/src/main/res/layout/activity_main.xml
+++ b/VirtualGamepad/app/src/main/res/layout/activity_main.xml
@@ -10,32 +10,139 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.example.virtualgamepad.ui.activities.MainActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/up_button"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="up" />
-        <Button
-            android:id="@+id/down_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="down" />
-        <Button
-            android:id="@+id/right_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="right" />
-        <Button
-            android:id="@+id/left_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="left" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center">
 
+            <Button
+                android:id="@+id/l2_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/l2_btn"/>
+
+            <Button
+                android:id="@+id/l1_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/l1_btn"/>
+
+            <Space
+                android:layout_width="85dp"
+                android:layout_height="1dp"/>
+
+            <Button
+                android:id="@+id/r1_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/r1_btn"/>
+
+            <Button
+                android:id="@+id/r2_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/r2_btn"/>
+        </LinearLayout>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="40dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <Button
+                    android:id="@+id/dpad_up_btn"
+                    style="@style/dpad_btn"
+                    android:text="@string/up_dpad_btn"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <Button
+                        android:id="@+id/dpad_left_btn"
+                        style="@style/dpad_btn"
+                        android:text="@string/left_dpad_btn"/>
+
+                    <Space
+                        android:layout_width="60dp"
+                        android:layout_height="5dp"/>
+
+                    <Button
+                        android:id="@+id/dpad_right_btn"
+                        style="@style/dpad_btn"
+                        android:text="@string/right_dpad_btn"/>
+                </LinearLayout>
+                <Button
+                    android:id="@+id/dpad_down_btn"
+                    style="@style/dpad_btn"
+                    android:text="@string/down_dpad_btn"/>
+            </LinearLayout>
+
+            <Space
+                android:layout_width="190dp"
+                android:layout_height="1dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <Button
+                    android:id="@+id/act_up_btn"
+                    style="@style/act_btn"
+                    android:background="@drawable/orange_button"
+                    android:text="@string/act_up_btn"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <Button
+                        android:id="@+id/act_left_btn"
+                        style="@style/act_btn"
+                        android:background="@drawable/blue_button"
+                        android:text="@string/act_left_btn"/>
+
+                    <Space
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"/>
+
+                    <Button
+                        android:id="@+id/act_right_btn"
+                        style="@style/act_btn"
+                        android:background="@drawable/red_button"
+                        android:text="@string/act_right_btn"/>
+                </LinearLayout>
+                <Button
+                    android:id="@+id/act_down_btn"
+                    style="@style/act_btn"
+                    android:background="@drawable/green_button"
+                    android:text="@string/act_down_btn"/>
+
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
