--- a/VirtualGamepad/app/src/main/res/layout/activity_main.xml
+++ b/VirtualGamepad/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
+        <!-- L1 L2 R1 R2 buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -53,13 +57,15 @@
 
         <Space
             android:layout_width="0dp"
-            android:layout_height="40dp"/>
+            android:layout_height="50dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="18dp"
             android:orientation="horizontal">
 
+            <!-- D-pad buttons -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -97,10 +103,53 @@
                     android:text="@string/down_dpad_btn"/>
             </LinearLayout>
 
-            <Space
-                android:layout_width="190dp"
-                android:layout_height="1dp"/>
+            <!-- Start and Resume buttons -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/spacing_medium_32"
+                android:layout_marginRight="@dimen/spacing_medium_32"
+                android:orientation="horizontal">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/spacing_normal_16"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/select_btn"
+                        android:layout_width="35dp"
+                        android:layout_height="30dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/select_btn_tv"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/spacing_normal_16"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/start_btn"
+                        android:layout_width="35dp"
+                        android:layout_height="30dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/start_btn_tv"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Control buttons (X, Y, A, B) -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
